// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Select Component should render a hint when a hint is passed in 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="test"
  >
    <span
      class="form-label-bold"
    >
      test
    </span>
    <span
      class="form-hint"
    >
      Testing hint
    </span>
  </label>
  <select
    class="form-control"
    id="test"
    name="test"
  >
    <option
      value=""
    >
      Select...
    </option>
  </select>
</div>
`;

exports[`The Select Component should render an error when an error is passed in 1`] = `
<div
  class="form-group form-group-error"
>
  <label
    class="form-label"
    for="test"
  >
    <span
      class="form-label-bold"
    >
      test
    </span>
    <span
      class="error-message"
    >
      Testing error
    </span>
  </label>
  <select
    class="form-control form-control-error"
    id="test"
    name="test"
  >
    <option
      value=""
    >
      Select...
    </option>
  </select>
</div>
`;

exports[`The Select Component should render correctly with multiple options 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="test"
  >
    <span
      class="form-label-bold"
    >
      test
    </span>
  </label>
  <select
    class="form-control"
    id="test"
    name="test"
  >
    <option
      value=""
    >
      Select...
    </option>
    <option
      value="opt1"
    >
      opt1-label
    </option>
    <option
      value="opt2"
    >
      opt2-label
    </option>
  </select>
</div>
`;

exports[`The Select Component should render correctly with multiple options and one selected 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="test"
  >
    <span
      class="form-label-bold"
    >
      test
    </span>
  </label>
  <select
    class="form-control"
    id="test"
    name="test"
  >
    <option
      value=""
    >
      Select...
    </option>
    <option
      value="opt1"
    >
      opt1-label
    </option>
    <option
      selected=""
      value="opt2"
    >
      opt2-label
    </option>
  </select>
</div>
`;

exports[`The Select Component should render correctly with no options 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="test"
  >
    <span
      class="form-label-bold"
    >
      test
    </span>
  </label>
  <select
    class="form-control"
    id="test"
    name="test"
  >
    <option
      value=""
    >
      Select...
    </option>
  </select>
</div>
`;
